# MCP_Servers_and_Clients

CLIENT/: client.py  pyproject.toml
HELLOWORLD/: pyproject.toml  weather.py
MCP-BUILD-MEMORY-TRACKER/: .env
MCP_PRIMITIVES_AND_INPUTS/: main.py  prompt.py  pyproject.toml  resources.py
MCP_SERVER_DEEPDIVE_DEPLOYMENT/: .gitignore  README.md  main.py  pyproject.toml
MCP_SERVER_DEEPDIVE_DEPLOYMENT/src/mcp_server_deepdive_deployment.egg-info/: PKG-INFO
MCP_SERVER_DEEPDIVE_DEPLOYMENT/src/mcpserver/: deployment.py
MCP_SERVER_DEEPDIVE_FUNCTIONALITY/: crypto.py  local.py  log.txt  notes.txt  other_inputs.py  pyproject.toml  screenshot.py  websearch.py
MCP_SERVER_STREAMABLE_HTTP/: pyproject.toml  server.py
mcp-build-chess/: README.md
